# gunflow

./: CMakeLists.txt  LICENSE  config.h.in  linalg.cpp  linalg.h  main.cpp  ndarray.cpp  ndarray.h  pprint.cpp  pprint.h  test.cpp
src/: buffer.cpp  buffer.h  dtype.h  linalg1.cpp  linalg1.h  linalg2.cpp  linalg2.h  ndarray.cpp  ndarray.h  pprint.cpp  pprint.h  shape.cpp  shape.h  slice.cpp  slice.h  slices.cpp  slices.h  strides.cpp  strides.h  util.cpp  util.h  view.h
src/func/: sigmoid.h
src/nn/: mlp.cpp  mlp.h  transfer.cpp  transfer.h
test/: buffer_test.cpp  linalg1_test.cpp  shape_test.cpp  slice_test.cpp  slices_test.cpp  strides_test.cpp
